<resources>
    <string name="app_name">IdleGameWhat</string>
    <string name="test">PlaceHolder</string>
    <string name="Button1">Get a small loan</string>
    <string name="Button2">Spend your money</string>
    <string name="totalMoney">0</string>
    <string name="JobPageTitle">Jobs</string>
    <string name="ResourceAmount">M</string>
    <string name="UpgradeImage">File Bankcruptcy</string>
    <string name="Job1">Stable</string>
    <string name="TownHall_descriptor">Goes to Job Screen</string>
    <string name="Job2">Carpenter</string>
    <string name="Job3">Mining</string>
    <string name="Job4">GraveDigging</string>
    <string name="Job5">Necromancy</string>
    <string name="StoreTime">TimeSavers</string>
    <string name="Store_Message">You bought %1$s, Thank you</string>
    <string name="Store_First_Button">$2</string>
    <string name="DummyPopup">Story/Upgrade text here </string>
    <string name="House_descriptor">Opens a Popup Window</string>
    <string name="Recap_text">This will show how much you made while offline</string>

</resources>
